--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
 description = "Emulating various values at compile-time using types"
 license = "MIT OR Apache-2.0"
+readme = "README.md"
 
 [dependencies]
