--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ authors = ["Asger Hautop Drewsen <asger@tyilo.com>"]
 description = "Emulating various values at compile-time using types"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
+repository = "https://github.com/tyilo/typefun"
 
 [dependencies]
